--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "accolades",
+  "name": "@frontbastard/nextcloud-electron",
+  "repository": "https://github.com/frontbastard/nextcloud-electron.git",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder -c electron-builder.json5",
