--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -25,5 +25,6 @@ jobs:
     - name: Build
       run: |
         npm install
+        npm install -D webpack-cli
         npx webpack
         npm run build -d -- --linux
