--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm ci
       - run: npm run build -d -- --linux
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
   publish-gpr:
     needs: build
@@ -36,4 +36,4 @@ jobs:
       - run: npm run build -d -- --linux
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
