--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@frontbastard/nextcloud-electron",
   "repository": "https://github.com/frontbastard/nextcloud-electron.git",
   "version": "0.0.1",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder -c electron-builder.json5",
